erDiagram
    CATEGORIAS {
        int id_cat PK
        varchar nome
        decimal valor_diaria
    }
    
    VEICULOS {
        varchar placa PK
        int id_cat FK
        varchar renavam "UNIQUE"
        varchar marca
        varchar modelo
        varchar cor
        int ano_fabricacao
        varchar tipo_combustivel
        int km_atual
        int nivel_combustivel
        varchar status "ENUM"
    }
    
    CLIENTES {
        varchar cpf PK
        varchar nome
        date data_nascimento
        varchar email "UNIQUE"
        boolean inadimplente
        varchar cnh_numero "UNIQUE"
        varchar cnh_categoria "CHECK constraint"
        date cnh_validade
        varchar endereco_rua
        varchar endereco_numero
        varchar endereco_bairro
        varchar endereco_cidade
        varchar endereco_estado
        varchar endereco_cep
    }
    
    TELEFONES_CLIENTE {
        varchar cpf_cliente PK, FK
        varchar numero PK
        varchar tipo
    }
    
    FUNCIONARIOS {
        int id_func PK
        varchar nome
        varchar cpf "UNIQUE"
        varchar cargo "Atendente/Gerente"
    }
    
    SEGUROS {
        int id_seguro PK
        varchar nome
        text descricao_cobertura
        decimal valor_diario
    }
    
    LOCACOES {
        int id_loc PK
        varchar cpf_cliente FK
        varchar placa_veiculo FK
        int id_func_registro FK
        int id_func_autoriza FK "NULLABLE"
        int id_seguro FK
        varchar status "ENUM"
        datetime data_reserva
        datetime data_retirada
        datetime data_devol_prevista
        datetime data_devol_real "NULLABLE"
        decimal valor_total "Calculado no encerramento"
    }
    
    VISTORIAS {
        int id_vistoria PK
        int id_loc FK
        int id_func FK
        varchar tipo
        datetime data_hora
        int km
        int nivel_combustivel
        text observacoes
    }
    
    PAGAMENTOS {
        int id_pagamento PK
        int id_loc FK
        varchar forma_pagamento
        decimal valor
        datetime data
    }
    
    COBRANCAS_EXTRAS {
        int id_cobranca PK
        int id_loc FK
        int id_vistoria FK "NULLABLE"
        varchar tipo
        text descricao
        decimal valor
    }
    
    MANUTENCOES {
        int id_manut PK
        varchar placa_veiculo FK
        int id_func FK
        varchar tipo
        varchar motivo
        text descricao
        date data_entrada
        date previsao_saida
        date data_saida_real "NULLABLE"
        decimal custo
    }

    %% RELACIONAMENTOS
    CATEGORIAS ||--o{ VEICULOS : "classifica"
    CLIENTES ||--o{ TELEFONES_CLIENTE : "possui"
    CLIENTES ||--o{ LOCACOES : "realiza"
    VEICULOS ||--o{ LOCACOES : "vincula"
    FUNCIONARIOS ||--o{ LOCACOES : "registra/autoriza"
    SEGUROS ||--o{ LOCACOES : "cobre"
    LOCACOES ||--o{ VISTORIAS : "gera"
    LOCACOES ||--o{ PAGAMENTOS : "gera"
    LOCACOES ||--o{ COBRANCAS_EXTRAS : "gera"
    VISTORIAS ||--o| COBRANCAS_EXTRAS : "origina"
    VEICULOS ||--o{ MANUTENCOES : "sofre"
    FUNCIONARIOS ||--o{ VISTORIAS : "realiza"
    FUNCIONARIOS ||--o{ MANUTENCOES : "registra"